k8s_practice_yml/Inginx_Ingress/ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginxsvc
  namespace: nginx-ingress
spec:
  type: loadBalancer
  selector:
    app: nginx-ingress
  ports:
  - port: 80
    targetPort: 80
