k8s_practice_yml/Inginx_Ingress/Ingress_demo.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: nginx.datagenpro.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hotstarsvc
                port:
                  number: 8000
