k8s_practice_yml/Inginx_Ingress/ingress_rule.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hotstar-ingress
  namespace: test
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /

spec:
  ingressClassName: nginx

  rules:
  - host: testcg.refactorq.com
    http:
      paths:
      - path: /hotstar
        pathType: Prefix
        backend:
          service:
            name: hotstarsvc
            port:
              number: 8081
